src/test/resources/tokens/invalid/integer_out_of_bounds_negative_decimal.unpick
unpick v3
const int
    0 = -2147483649